# sqlitewrapper

./: .gitignore  LICENSE  README.md  __init__.py  databaseobjects.py  datatypes.py  errors.py  pyproject.toml  setup.py
src/sqlitewrapper/: __init__.py  databaseobjects.py  datatypes.py  errors.py
src/sqlitewrapper/examples/: example.py  example_class.py  my_database.db
